--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,19 @@ body {
     }
 }
 
+.tasks {
+    margin-top: 1em;
+
+    @media only screen and (min-width: 768px) {
+        margin-top: 3em;
+    }
+}
+
+.task-form {
+    display: flex;
+    flex-direction: column;
+}
+
 .to-do-list {
     background-color: white;
 }
